--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,14 +1,14 @@
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 
-	modApi "me.shedaniel:architectury:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury:${rootProject.architectury_version}"
 	modApi "dev.latvian.mods:rhino:${rootProject.rhino_version}"
 }
 
 def ENV = System.getenv()
 
 architectury {
-	common()
+	common(false)
 }
 
 publishing {
