--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "com.github.johnrengelman.shadow" version "5.0.0"
+	id "com.github.johnrengelman.shadow" version "7.0.0"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
@@ -19,16 +19,16 @@ dependencies {
 	modImplementation("net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}")
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}")
 
-	modApi("me.shedaniel:architectury-fabric:${rootProject.architectury_version}")
+	modApi("dev.architectury:architectury-fabric:${rootProject.architectury_version}")
 
 	modApi("dev.latvian.mods:rhino:${rootProject.rhino_version}")
 
-	modCompileOnly("me.shedaniel:RoughlyEnoughItems-api:${rootProject.fabric_rei_version}") {
+	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:${rootProject.fabric_rei_version}") {
 		exclude group: "net.fabricmc.fabric-api"
 		exclude group: "net.fabricmc"
 	}
 
-	modRuntime("me.shedaniel:RoughlyEnoughItems:${rootProject.fabric_rei_version}") {
+	modRuntime("me.shedaniel:RoughlyEnoughItems-fabric:${rootProject.fabric_rei_version}") {
 		exclude group: "net.fabricmc.fabric-api"
 		exclude group: "net.fabricmc"
 	}
