--- a/gradle.properties
+++ b/gradle.properties
@@ -10,12 +10,12 @@ mod_maven_path=https://maven.saps.dev/minecraft
 curseforge_id_forge=238086
 curseforge_id_fabric=395864
 curseforge_type=release
-minecraft_version=1.16.5
+minecraft_version=1.17
 rhino_version=1.7.13-build.23
-architectury_version=1.15.13
-fabric_loader_version=0.11.1
-fabric_api_version=0.30.0+1.16
-fabric_rei_version=5.8.3
+architectury_version=2.0.6
+fabric_loader_version=0.11.3
+fabric_api_version=0.34.9+1.17
+fabric_rei_version=6.0.249-alpha
 forge_version=36.1.4
 forge_jei_version=7.+
 forge_bookshelf_version=10.+
