--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@ pluginManagement {
 	}
 }
 
-include "common", "fabric", "forge"
+include "common", "fabric"//, "forge"
 
-rootProject.name = 'KubeJS-1.16.5'
+rootProject.name = 'KubeJS-1.17'
